[SITIONIX-92] - Refactor cookie headers and csrf origin guard